media/lib/src/bindings/frb_generated.io.dart

// This file is automatically generated, so please do not edit it.
// @generated by `flutter_rust_bridge`@ 2.11.1.

// ignore_for_file: unused_import, unused_element, unnecessary_import, duplicate_ignore, invalid_use_of_internal_member, annotate_overrides, non_constant_identifier_names, curly_braces_in_flow_control_structures, prefer_const_literals_to_create_immutables, unused_field

import 'api/media.dart';
import 'dart:async';
import 'dart:convert';
import 'dart:ffi' as ffi;
import 'frb_generated.dart';
import 'package:flutter_rust_bridge/flutter_rust_bridge_for_generated_io.dart';

abstract class RustLibApiImplPlatform extends BaseApiImpl<RustLibWire> {
  RustLibApiImplPlatform({
    required super.handler,
    required super.wire,
    required super.generalizedFrbRustBinding,
    required super.portManager,
  });

  @protected
  AnyhowException dco_decode_AnyhowException(dynamic raw);

  @protected
  String dco_decode_String(dynamic raw);

  @protected
  ThumbnailParams dco_decode_box_autoadd_thumbnail_params(dynamic raw);

  @protected
  BigInt dco_decode_box_autoadd_u_64(dynamic raw);

  @protected
  Uint8List dco_decode_list_prim_u_8_strict(dynamic raw);

  @protected
  String? dco_decode_opt_String(dynamic raw);

  @protected
  BigInt? dco_decode_opt_box_autoadd_u_64(dynamic raw);

  @protected
  ThumbnailParams dco_decode_thumbnail_params(dynamic raw);

  @protected
  int dco_decode_u_32(dynamic raw);

  @protected
  BigInt dco_decode_u_64(dynamic raw);

  @protected
  int dco_decode_u_8(dynamic raw);

  @protected
  VideoInfo dco_decode_video_info(dynamic raw);

  @protected
  AnyhowException sse_decode_AnyhowException(SseDeserializer deserializer);

  @protected
  String sse_decode_String(SseDeserializer deserializer);

  @protected
  ThumbnailParams sse_decode_box_autoadd_thumbnail_params(
      SseDeserializer deserializer);

  @protected
  BigInt sse_decode_box_autoadd_u_64(SseDeserializer deserializer);

  @protected
  Uint8List sse_decode_list_prim_u_8_strict(SseDeserializer deserializer);

  @protected
  String? sse_decode_opt_String(SseDeserializer deserializer);

  @protected
  BigInt? sse_decode_opt_box_autoadd_u_64(SseDeserializer deserializer);

  @protected
  ThumbnailParams sse_decode_thumbnail_params(SseDeserializer deserializer);

  @protected
  int sse_decode_u_32(SseDeserializer deserializer);

  @protected
  BigInt sse_decode_u_64(SseDeserializer deserializer);

  @protected
  int sse_decode_u_8(SseDeserializer deserializer);

  @protected
  VideoInfo sse_decode_video_info(SseDeserializer deserializer);

  @protected
  int sse_decode_i_32(SseDeserializer deserializer);

  @protected
  bool sse_decode_bool(SseDeserializer deserializer);

  @protected
  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_encode_AnyhowException(
      AnyhowException raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    throw UnimplementedError();
  }

  @protected
  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_encode_String(String raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    return cst_encode_list_prim_u_8_strict(utf8.encoder.convert(raw));
  }

  @protected
  ffi.Pointer<wire_cst_thumbnail_params>
      cst_encode_box_autoadd_thumbnail_params(ThumbnailParams raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    final ptr = wire.cst_new_box_autoadd_thumbnail_params();
    cst_api_fill_to_wire_thumbnail_params(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<ffi.Uint64> cst_encode_box_autoadd_u_64(BigInt raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    return wire.cst_new_box_autoadd_u_64(cst_encode_u_64(raw));
  }

  @protected
  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_encode_list_prim_u_8_strict(
      Uint8List raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    final ans = wire.cst_new_list_prim_u_8_strict(raw.length);
    ans.ref.ptr.asTypedList(raw.length).setAll(0, raw);
    return ans;
  }

  @protected
  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_encode_opt_String(
      String? raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    return raw == null ? ffi.nullptr : cst_encode_String(raw);
  }

  @protected
  ffi.Pointer<ffi.Uint64> cst_encode_opt_box_autoadd_u_64(BigInt? raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    return raw == null ? ffi.nullptr : cst_encode_box_autoadd_u_64(raw);
  }

  @protected
  int cst_encode_u_64(BigInt raw) {
    // Codec=Cst (C-struct based), see doc to use other codecs
    return raw.toSigned(64).toInt();
  }

  @protected
  void cst_api_fill_to_wire_box_autoadd_thumbnail_params(
      ThumbnailParams apiObj, ffi.Pointer<wire_cst_thumbnail_params> wireObj) {
    cst_api_fill_to_wire_thumbnail_params(apiObj, wireObj.ref);
  }

  @protected
  void cst_api_fill_to_wire_thumbnail_params(
      ThumbnailParams apiObj, wire_cst_thumbnail_params wireObj) {
    wireObj.time_ms = cst_encode_u_64(apiObj.timeMs);
    wireObj.max_width = cst_encode_u_32(apiObj.maxWidth);
    wireObj.max_height = cst_encode_u_32(apiObj.maxHeight);
  }

  @protected
  void cst_api_fill_to_wire_video_info(
      VideoInfo apiObj, wire_cst_video_info wireObj) {
    wireObj.duration_ms = cst_encode_u_64(apiObj.durationMs);
    wireObj.width = cst_encode_u_32(apiObj.width);
    wireObj.height = cst_encode_u_32(apiObj.height);
    wireObj.size_bytes = cst_encode_u_64(apiObj.sizeBytes);
    wireObj.bitrate = cst_encode_opt_box_autoadd_u_64(apiObj.bitrate);
    wireObj.codec_name = cst_encode_opt_String(apiObj.codecName);
    wireObj.format_name = cst_encode_opt_String(apiObj.formatName);
  }

  @protected
  int cst_encode_u_32(int raw);

  @protected
  int cst_encode_u_8(int raw);

  @protected
  void sse_encode_AnyhowException(
      AnyhowException self, SseSerializer serializer);

  @protected
  void sse_encode_String(String self, SseSerializer serializer);

  @protected
  void sse_encode_box_autoadd_thumbnail_params(
      ThumbnailParams self, SseSerializer serializer);

  @protected
  void sse_encode_box_autoadd_u_64(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_list_prim_u_8_strict(
      Uint8List self, SseSerializer serializer);

  @protected
  void sse_encode_opt_String(String? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_box_autoadd_u_64(BigInt? self, SseSerializer serializer);

  @protected
  void sse_encode_thumbnail_params(
      ThumbnailParams self, SseSerializer serializer);

  @protected
  void sse_encode_u_32(int self, SseSerializer serializer);

  @protected
  void sse_encode_u_64(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_u_8(int self, SseSerializer serializer);

  @protected
  void sse_encode_video_info(VideoInfo self, SseSerializer serializer);

  @protected
  void sse_encode_i_32(int self, SseSerializer serializer);

  @protected
  void sse_encode_bool(bool self, SseSerializer serializer);
}

// Section: wire_class

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import

/// generated by flutter_rust_bridge
class RustLibWire implements BaseWire {
  factory RustLibWire.fromExternalLibrary(ExternalLibrary lib) =>
      RustLibWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RustLibWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RustLibWire.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void store_dart_post_cobject(DartPostCObjectFnType ptr) {
    return _store_dart_post_cobject(ptr);
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
    'store_dart_post_cobject',
  );
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  void wire__crate__api__media__generate_thumbnail(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
    ffi.Pointer<wire_cst_thumbnail_params> params,
  ) {
    return _wire__crate__api__media__generate_thumbnail(port_, path, params);
  }

  late final _wire__crate__api__media__generate_thumbnailPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_thumbnail_params>,
          )>>('frbgen_media_wire__crate__api__media__generate_thumbnail');
  late final _wire__crate__api__media__generate_thumbnail =
      _wire__crate__api__media__generate_thumbnailPtr.asFunction<
          void Function(
            int,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_thumbnail_params>,
          )>();

  void wire__crate__api__media__get_video_info(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__media__get_video_info(port_, path);
  }

  late final _wire__crate__api__media__get_video_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_media_wire__crate__api__media__get_video_info');
  late final _wire__crate__api__media__get_video_info =
      _wire__crate__api__media__get_video_infoPtr.asFunction<
          void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  ffi.Pointer<wire_cst_thumbnail_params>
      cst_new_box_autoadd_thumbnail_params() {
    return _cst_new_box_autoadd_thumbnail_params();
  }

  late final _cst_new_box_autoadd_thumbnail_paramsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<wire_cst_thumbnail_params> Function()>>(
      'frbgen_media_cst_new_box_autoadd_thumbnail_params');
  late final _cst_new_box_autoadd_thumbnail_params =
      _cst_new_box_autoadd_thumbnail_paramsPtr
          .asFunction<ffi.Pointer<wire_cst_thumbnail_params> Function()>();

  ffi.Pointer<ffi.Uint64> cst_new_box_autoadd_u_64(int value) {
    return _cst_new_box_autoadd_u_64(value);
  }

  late final _cst_new_box_autoadd_u_64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint64> Function(ffi.Uint64)>>(
    'frbgen_media_cst_new_box_autoadd_u_64',
  );
  late final _cst_new_box_autoadd_u_64 = _cst_new_box_autoadd_u_64Ptr
      .asFunction<ffi.Pointer<ffi.Uint64> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(
              ffi.Int32)>>('frbgen_media_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  ffi.Pointer<CVideoInfo> media_get_video_info(ffi.Pointer<ffi.Char> path) {
    return _media_get_video_info(path);
  }

  late final _media_get_video_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CVideoInfo> Function(
              ffi.Pointer<ffi.Char>)>>('media_get_video_info');
  late final _media_get_video_info = _media_get_video_infoPtr
      .asFunction<ffi.Pointer<CVideoInfo> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<CBuffer> media_generate_thumbnail(
    ffi.Pointer<ffi.Char> path,
    int time_ms,
    int max_width,
    int max_height,
  ) {
    return _media_generate_thumbnail(path, time_ms, max_width, max_height);
  }

  late final _media_generate_thumbnailPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CBuffer> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Uint32,
            ffi.Uint32,
          )>>('media_generate_thumbnail');
  late final _media_generate_thumbnail =
      _media_generate_thumbnailPtr.asFunction<
          ffi.Pointer<CBuffer> Function(
              ffi.Pointer<ffi.Char>, int, int, int)>();

  void media_free_video_info(ffi.Pointer<CVideoInfo> ptr) {
    return _media_free_video_info(ptr);
  }

  late final _media_free_video_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CVideoInfo>)>>(
    'media_free_video_info',
  );
  late final _media_free_video_info = _media_free_video_infoPtr
      .asFunction<void Function(ffi.Pointer<CVideoInfo>)>();

  void media_free_buffer(ffi.Pointer<CBuffer> ptr) {
    return _media_free_buffer(ptr);
  }

  late final _media_free_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CBuffer>)>>(
    'media_free_buffer',
  );
  late final _media_free_buffer =
      _media_free_bufferPtr.asFunction<void Function(ffi.Pointer<CBuffer>)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
    'dummy_method_to_enforce_bundling',
  );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

typedef DartPort = ffi.Int64;
typedef DartDartPort = int;
typedef DartPostCObjectFnTypeFunction = ffi.Bool Function(
    DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction = bool Function(
    DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPostCObjectFnType
    = ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_thumbnail_params extends ffi.Struct {
  @ffi.Uint64()
  external int time_ms;

  @ffi.Uint32()
  external int max_width;

  @ffi.Uint32()
  external int max_height;
}

final class CVideoInfo extends ffi.Struct {
  @ffi.Uint64()
  external int duration_ms;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint64()
  external int size_bytes;

  @ffi.Bool()
  external bool has_bitrate;

  @ffi.Uint64()
  external int bitrate;

  external ffi.Pointer<ffi.Char> codec_name;

  external ffi.Pointer<ffi.Char> format_name;
}

final class CBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint64()
  external int len;
}

final class wire_cst_video_info extends ffi.Struct {
  @ffi.Uint64()
  external int duration_ms;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint64()
  external int size_bytes;

  external ffi.Pointer<ffi.Uint64> bitrate;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> codec_name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> format_name;
}
